--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@
     height: fit-content !important;
     width: -moz-fit-content !important;
     padding: 5px 10px 5px 10px;
-    top: 10px;
+    bottom: 10px;
     left: calc(16.66666667% + 10px);
     display: flex;
     justify-content: center;
