--- a/curve-fever/index.css
+++ b/curve-fever/index.css
@@ -115,6 +115,45 @@ kbd{
     background-color: rgb(101, 139, 58);
 }
 
+.fps{
+    color: white;
+    position: fixed;
+    right: 539px;
+    width:80px;
+    top: 25px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:40px;
+    margin:auto;
+    background-color: #606060;
+}
+
+#scoreboard{
+    position: fixed;
+    left: 0;
+    top: 75px;
+    width: 300px;
+    backdrop-filter: blur(2px);
+    height: 500px;
+    margin:auto;
+    background-color: rgba(50,50,50,.6);
+    z-index: 200;
+}
+
+#scoreboard .title{
+    width: 100%;
+    height: 50px;
+    display:flex;
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
 #menu .wrapper{
     margin-top: 10px;
     display:flex;
