--- a/projects/modeling-tool/css/index.css
+++ b/projects/modeling-tool/css/index.css
@@ -12,6 +12,49 @@ html, body {
     font-family: 'Nunito',sans-serif;
 }
 
+.loader{
+    z-index: 500;
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #404040;
+    transition: all .25s ease;
+    opacity: 1;
+    pointer-events: all;
+}
+
+.loader.hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.loader img{
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    inset: 0;
+    border-radius: 50%;
+    background-color: #505050;
+    padding: 10px;
+    margin: auto;
+    box-shadow: 0 0 16px 2px rgba(0,0,0,0.2);
+}
+
+.loader span{
+    inset: 0;
+    position: fixed;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    font-size: 44px;
+    color:#87e15b;
+    font-weight: bolder;
+    margin: auto;
+}
+
 .top-bar{
     position: absolute;
     top: 0;
@@ -109,6 +152,7 @@ html, body {
 .properties-inspector .tab-content .window .property .input input{
     background-color: #303030;
     border-radius: 4px;
+    padding: 0px 5px;
     color:white;
     font-family: 'Nunito',sans-serif;
     border: none;
