--- a/css/index.css
+++ b/css/index.css
@@ -130,6 +130,7 @@ body{
     width: 200px !important;
     height: 285px;
     overflow: hidden;
+    margin-bottom: 20px;
     margin-right: 20px;
     cursor: pointer;
     border-radius: 12px !important;
