--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ body{
 }
 
 .header{
-    padding: 0 80px;
+    padding: 0 35px;
     height: 150px;
     display:flex;
     justify-content: flex-start;
@@ -30,96 +30,12 @@ body{
     width: 100%;
     height: calc(100% - 150px);
     display:flex;
-    justify-content: center;
+    justify-content: space;
     align-items: center;
-}
-
-.content .nav-bar{
-    width: 60px;
-    height: 100%;
-}
-
-.content .nav-bar ul{
-    list-style: none;
-    margin:0;
-    padding:0;
-    height:100%;
-    width:100%;
-    display:flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-}
-
-.content .nav-bar ul li{
-    width: 45px;
-    height: 45px;
-    display:flex;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    color: #AAA;
-    border: 2px solid transparent;
-    font-size: 24px;
-    background-color: transparent;
-    transition: all .3s ease-in-out;
-    border-radius: 12px;
-    margin-top: 10px;
-}
-
-.content .nav-bar ul li:first-child{
-    margin-top: 0px !important;
-}
-
-.content .nav-bar ul li .t-tip{
-    position: absolute;
-    left: calc(100% + 10px);
-    top: 0;
-    bottom: 0;
-    height: 30px;
-    pointer-events: none !important;
-    margin: auto;
-    font-size: 16px;
-    transform: translateX(50px);
-    opacity: 0;
-    transition: all .3s ease;
-    border-radius: 6px;
-    z-index: 20;
-    background-color: #909090;
-    color: #fff;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2px 10px;
-}
-
-.content .nav-bar ul li:hover .t-tip{
-    opacity: 1;
-    transform: translateX(0px);
-}
-
-.content .nav-bar ul li.active{
-    border: 2px solid rgba(50,50,50,.2);
-    background-color: rgba(90,90,90,.2);
-    color: #505050;
-}
-
-.content .nav-bar ul li ion-icon{
-    pointer-events: none;
-}
-
-.content .nav-bar ul li.active:hover{
-    border: 2px solid rgba(50,50,50,1);
-}
-
-.content .nav-bar ul li:hover{
-    background-color: rgba(90,90,90,.2);
-    color: #505050;
 }
 
 .content .projects{
-    width: calc(100% - 50px);
+    width: calc(100%);
     height: 100%;
     margin: 0;
     padding: 0;
