--- a/projects/lego-3d/css/index.css
+++ b/projects/lego-3d/css/index.css
@@ -7,9 +7,14 @@ html,body{
     overflow: hidden;
 }
 
+.babylonUnmuteIcon{
+    z-index: 5 !important;
+}
+
 *{
     font-family: 'Poppins',sans-serif;
     box-sizing: border-box;
+    user-select: none;
 }
 
 #app{
@@ -20,26 +25,172 @@ html,body{
 
 #app .top-bar{
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: #212328;
     box-shadow: 0 0 16px 2px rgba(0,0,0,.1);
     border-bottom: 2px solid #060608;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 10px;
+}
+
+#app .top-bar .logo{
+    width: 35px;
+    height: 35px;
+    display:flex;
+    margin-right: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+#app .top-bar .logo img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+#app .top-bar .nav-item{
+    height: 25px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    padding: 0 10px;
+    color:white;
+    border-radius: 4px;
+    transition: all .25s ease;
+    cursor: pointer;
+    position: relative;
+}
+
+#app .top-bar .nav-item .dropdown{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 200px;
+    height: fit-content;
+    z-index: 10;
+    background-color: #424756;
+    border-radius: 0px 4px 4px 4px;
+    opacity: 0;
+    pointer-events: none;
+    will-change: transform;
+    transform: translateY(10px);
+    transition: all .25s ease;
+    box-shadow: 0 0 12px 2px rgba(0,0,0,.1);
+    overflow: hidden;
+}
+
+#app .top-bar .nav-item:not(.disabled):hover .dropdown{
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0px);
+}
+
+#app .top-bar .nav-item .dropdown .dropdown-item{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    padding: 0 10px;
+    justify-content: space-between;
+    align-items: center;
+    transition: all .25s ease;
+}
+
+#app .top-bar .nav-item .dropdown .dropdown-item:hover{
+    background-color: #525a72;
+}
+
+#app .top-bar .nav-item .dropdown .dropdown-item .name{
+    color: #EEE;
+    font-size: 15px;
+    pointer-events: none;
+}
+
+#app .top-bar .nav-item .dropdown .dropdown-item .shortcut{
+    color: #DDD;
+    opacity: .7;
+    font-size: 14px;
+    pointer-events: none;
+}
+
+#app .top-bar .nav-item .dropdown .divider{
+    height: 2px;
+    width: calc(100% - 10px);
+    margin-left: 5px;
+    background-color: #525a72;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#app .top-bar .nav-item:hover{
+    background-color: #3c414b;
+    border-radius: 4px 4px 0px 0px;
 }
 
 #app .tool-box{
-    width: 200px;
-    height: calc(100% - 50px);
+    width: 220px;
+    height: calc(100% - 40px);
     background-color: #212328;
     float: left;
     border-right: 2px solid #060608;
 }
 
-#app .tool-box .item{
-    width: 85px;
+#app .tool-box .category-wrapper{
+    height: 30px;
+    width: 100%;
+    background-color: #212328;
+    transition: all .3s ease;
+}
+
+#app .tool-box .category-wrapper .category-header{
+    background-color: #2a2d34;
+    line-height: 30px;
+    height: 30px;
+    width: 100%;
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    padding: 0 5px;
+    border-bottom: 2px solid #060608;
+    cursor: pointer;
+}
+
+#app .tool-box .category-wrapper .category-header span{
+    color: #DDD;
+}
+
+#app .tool-box .category-wrapper .category-header i{
+    color: #fff;
+    will-change: transform;
+    transition: all .25s ease;
+}
+
+#app .tool-box .category-wrapper.expanded .category-header i{
+    transform: rotate(180deg);
+}
+
+#app .tool-box .category-wrapper .category-content{
+    height: 0px;
+    opacity: 0;
+    pointer-events: none;
+    overflow: hidden;
+    transition: all .3s ease;
+    border-bottom: 2px solid #060608;
+}
+
+#app .tool-box .category-wrapper.expanded .category-content{
+    opacity: 1;
+    pointer-events: all;
+}
+
+#app .tool-box .category-wrapper .category-content .brick-item{
+    width: 95px;
     margin-left: 10px;
     height: 95px;
-    background-color: #2a2d34;
-    border-radius: 4px;
+    background-color: #3c414b;
+    border-radius: 2px;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -53,18 +204,18 @@ html,body{
     position: relative;
 }
 
-#app .tool-box .item:hover{
+#app .tool-box .category-wrapper .category-content .brick-item:hover{
     transform: translateY(-3px) translateZ(0);
 }
 
-#app .tool-box .item img{
+#app .tool-box .category-wrapper .category-content .brick-item img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     margin-bottom: 10px;
 }
 
-#app .tool-box .item .name{
+#app .tool-box .category-wrapper .category-content .brick-item .name{
     position: absolute;
     bottom: 1px;
     width: 100%;
@@ -73,20 +224,26 @@ html,body{
     right: 0;
     text-align: center;
     color:white;
+    white-space: nowrap;
+    max-width: calc(100% - 10px);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+    margin-left: 5px;
 }
 
 #app #editor{
     outline: none !important;
     border: none !important;
     float: left;
-    width: calc(100% - 420px);
-    height: calc(100% - 50px);
+    width: calc(100% - 440px);
+    height: calc(100% - 40px);
     transition: all .3s ease;
 }
 
 #app .inspector{
     width: 220px;
-    height: calc(100% - 50px);
+    height: calc(100% - 40px);
     float: left;
     background-color: #212328;
     transition: all .3s ease;
