--- a/css/index.css
+++ b/css/index.css
@@ -1,95 +1,462 @@
-/* FONT */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('http://fonts.cdnfonts.com/css/sf-mono');
+
+:root{
+    --bg-color: #212328;
+    --accent-color: #64ffda;
+}
 
 *{
     font-family: 'Poppins',sans-serif;
     user-select: none;
     touch-action: none;
+    box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(247, 249, 251);
+body,html{
+    background-color: var(--bg-color);
+    width: 100%;
+    height: 100%;
     margin:0;
     padding: 0;
     overflow: hidden;
 }
 
-.header{
-    padding: 0 35px;
-    height: 150px;
-    display:flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-family: 'Russo One', sans-serif !important;
-    font-size: 80px;
-    color: #505050;
-    transform: skew(-20deg);
-}
+/* Loader */
 
-.content{
-    width: 100%;
-    height: calc(100% - 150px);
-    display:flex;
-    justify-content: space;
-    align-items: center;
-}
-
-.content .projects{
-    width: calc(100%);
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    padding-left: 20px !important;
-}
-
-.project-item{
-    width: 200px !important;
-    height: 285px;
-    overflow: hidden;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    cursor: pointer;
-    border-radius: 12px !important;
-    padding:0 !important;
-    box-shadow: 0 0 16px 1px rgba(0,0,0,.1);
-    position: relative;
-}
-
-.project-item img{
-    width: 100%;
-    height: 105%;
-    z-index: -1;
-    transition: all .4s ease;
-    object-fit: cover;
-}
-
-.project-item:hover img{
-    transform: scale(1.2);
-    filter: grayscale(100%);
-}
-
-.project-item .title{
-    position: absolute;
+.loader{
+    position: fixed;
     inset: 0;
-    width: 180px;
-    margin:auto;
-    font-family: 'Poppins',sans-serif;
-    font-weight: bold;
-    padding: 10px;
-    box-shadow: 0 0 16px 1px rgba(0,0,0,.1);
-    height: 100px;
+    z-index: 50;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color);
     display:flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    z-index: 10;
-    background-color: rgba(0,0,0,.4);
-    backdrop-filter: blur(12px);
-    color:white;
-    border-radius: 24px;
-    transition: opacity .4s ease-in-out;
+    will-change: transform;
+    transition: transform .5s cubic-bezier(0.83, 0, 0.17, 1), opacity .5s ease-in-out;
 }
 
-.project-item.light .title{
-    background-color: rgba(255,255,255,.4);
+.loader.loaded{
+    transform: scale(0.2);
+    opacity: 0;
+    pointer-events: none;
+}
+
+.loader svg{
+    stroke-dasharray: 2338.5;
+    stroke-dashoffset: 2338.5;
+    animation: svgPath 3.5s linear forwards;
+    animation-delay: 250ms;
+}
+
+.loader svg g{
+    stroke: var(--accent-color) !important;
+}
+
+@keyframes svgPath{
+    to {stroke-dashoffset: 1500;}
+}
+
+/* Side-Bar */
+
+.side-bar{
+    margin-top: 15px;
+    width: 160px;
+    height: 100%;
+    background-color: var(--bg-color);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 30px;
+    float: left;
+}
+
+.side-bar #logo{
+    width: 95px;
+    height: 95px;
+    transform: translateY(-100px);
+    will-change: transform;
+    transition: transform .35s cubic-bezier(0.83, 0, 0.17, 1);
+}
+
+.side-bar.loaded #logo{
+    transform: translateY(0px);
+}
+
+.side-bar #menu{
+    width: 100%;
+    height: fit-content;
+    margin-top: auto;
+    margin-bottom: auto;
+    display:flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    transform: translateY(-50px);
+}
+
+.side-bar #menu .menu-item{
+    margin-bottom: 5px;
+    margin-top: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    position: relative;
+    will-change: transform;
+    transition: transform .2s ease;
+    transform: translateX(-100px);
+}
+
+.side-bar #menu .menu-item.loaded{
+    transform: translateX(0px);
+}
+
+.side-bar #menu .menu-item .top-left-right{
+    height: 2px;
+    width: 0;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: var(--accent-color);
+    transition: all .25s ease;
+}
+
+.side-bar #menu .menu-item .top-left-bottom{
+    height: 0;
+    width: 2px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: var(--accent-color);
+    transition: all .25s ease;
+}
+
+.side-bar #menu .menu-item .bottom-right-left{
+    height: 2px;
+    width: 0;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    background-color: var(--accent-color);
+    transition: all .25s ease;
+}
+
+.side-bar #menu .menu-item .bottom-right-top{
+    height: 0;
+    width: 2px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    background-color: var(--accent-color);
+    transition: all .25s ease;
+}
+
+.side-bar #menu .menu-item a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.side-bar #menu .menu-item i{
+    color:white;
+}
+
+.side-bar #menu .menu-item.active .top-left-bottom,
+.side-bar #menu .menu-item.active .bottom-right-top{
+    height: 30%;
+}
+
+.side-bar #menu .menu-item.active .top-left-right,
+.side-bar #menu .menu-item.active .bottom-right-left{
+    width: 30%;
+}
+
+/* Content */
+
+#content{
+    width: calc(100% - 160px);
+    height: 100%;
+    float: left;
+    padding: 0 100px;
+    opacity: 0;
+    will-change: opacity;
+    transition: opacity .25s cubic-bezier(0.83, 0, 0.17, 1);
+}
+
+#content.loaded{
+    opacity: 1;
+}
+
+/* Sections */
+
+.section{
+    position: relative;
+}
+
+.section .scroll-indicator{
+    width: 20px;
+    height: 40px;
+    border: 2px solid white;
+    border-radius: 10px;
+    display:flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 5px 0px;
+    position: absolute;
+    bottom: 60px;
+    right: 30px;
+}
+
+.section .scroll-indicator .wheel{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: white;
+    animation: scroll-indicator 1.5s cubic-bezier(0.83, 0, 0.17, 1) infinite;
+}
+
+@keyframes scroll-indicator{
+    0%{transform: translateY(0px);opacity: 1;}
+    100%{transform: translateY(20px);opacity: 0;}
+}
+
+.section.me .fp-tableCell{
+    vertical-align: top !important;
+    padding-top: 15%;
+}
+
+.section .accent{
+    color: var(--accent-color);
+}
+
+.section.me .introduction{
+    font-size: 20px;
+    font-family: 'SF Mono',sans-serif;
+    transform: translateY(50px);
+    opacity: 0;
+    will-change: transform, opacity;
+    transition: transform .3s cubic-bezier(0.83, 0, 0.17, 1), opacity .3s cubic-bezier(0.83, 0, 0.17, 1);
+}
+
+.section.me .name{
+    font-size: 72px;
+    font-weight: 700;
+    color: #EEE;
+    transform: translateY(50px);
+    opacity: 0;
+    will-change: transform, opacity;
+    transition: transform .3s cubic-bezier(0.83, 0, 0.17, 1), opacity .3s cubic-bezier(0.83, 0, 0.17, 1);
+    transition-delay: 100ms;
+}
+
+.section.me .web-developer{
+    font-size: 65px;
+    font-weight: 700;
+    color: #BCBCBC;
+    transform: translateY(50px);
+    opacity: 0;
+    will-change: transform, opacity;
+    transition: transform .3s cubic-bezier(0.83, 0, 0.17, 1), opacity .3s cubic-bezier(0.83, 0, 0.17, 1);
+    transition-delay: 200ms;
+}
+
+.section.me .description{
+    font-size: 18px;
+    color: #BCBCBC;
+    max-width: 60%;
+    transform: translateY(50px);
+    opacity: 0;
+    will-change: transform, opacity;
+    transition: transform .3s ease, opacity .3s ease;
+    transition-delay: 300ms;
+}
+
+.section.me.loaded .introduction{transform: translateY(0px);opacity: 1;}
+.section.me.loaded .name{transform: translateY(-5px);opacity: 1;}
+.section.me.loaded .web-developer{transform: translateY(-25px);opacity: 1;}
+.section.me.loaded .description{transform: translateY(-20px);opacity: 1;}
+.section.me.loaded .my-skills{transform: translateY(0px);opacity: 1;}
+
+.section.me .my-skills{
+    margin-top: 20px;
+    width: 150px;
+    height: 40px;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    transition: all .25s ease;
+    will-change: transform;
+    transform: translateY(50px);
+    transition-delay: 400ms;
+    cursor: pointer;
+}
+
+.section.me .my-skills .content{
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    z-index: 3;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--accent-color);
+    text-decoration: none;
+}
+
+.section.me .my-skills .content span,
+.section.me .my-skills .content i{
+    transition: all .25s ease;
+}
+
+.section.me .my-skills:hover .content span,
+.section.me .my-skills:hover .content i{
+    color: black;
+}
+
+.section.me .my-skills .hover-box{
+    width: 0px;
+    z-index: 1;
+    background-color: var(--accent-color);
+    height: 40px;
+    transition: all .35s ease;
+}
+
+.section.me .my-skills:hover .hover-box{
+    width: 150px;
+}
+
+.section.me .my-skills .border-box{
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+    width: 150px;
+    height: 40px;
+    border: 2px solid var(--accent-color);
+}
+
+.section.me .my-skills i{
+    margin-left: 5px;
+}
+
+.section.projects .title{
+    display:block;
+    font-size: 40px;
+    font-weight: 700;
+    color: #EEE;
+    transform: translateY(50px);
+    opacity: 0;
+    will-change: transform, opacity;
+    transition: transform .3s cubic-bezier(0.83, 0, 0.17, 1), opacity .3s cubic-bezier(0.83, 0, 0.17, 1);
+    transition-delay: 200ms;
+    margin-bottom: 10px;
+}
+
+.section.projects.loaded .title{
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.section.projects .item{
+    width: 25%;
+    aspect-ratio: 1.5/1;
+    float: left;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    transform: scale(.2);
+    opacity: 0;
+    transition: transform .25s cubic-bezier(0.83, 0, 0.17, 1), opacity .25s cubic-bezier(0.83, 0, 0.17, 1);
+}
+
+.section.projects.loaded .item{
+    transform: scale(1);
+    opacity: 1;
+}
+
+.section.projects.loaded .item:nth-child(1){transition-delay: 100ms;}
+.section.projects.loaded .item:nth-child(2){transition-delay: 200ms;}
+.section.projects.loaded .item:nth-child(3){transition-delay: 300ms;}
+.section.projects.loaded .item:nth-child(4){transition-delay: 400ms;}
+.section.projects.loaded .item:nth-child(5){transition-delay: 500ms;}
+.section.projects.loaded .item:nth-child(6){transition-delay: 600ms;}
+.section.projects.loaded .item:nth-child(7){transition-delay: 700ms;}
+.section.projects.loaded .item:nth-child(8){transition-delay: 800ms;}
+.section.projects.loaded .item:nth-child(9){transition-delay: 900ms;}
+.section.projects.loaded .item:nth-child(10){transition-delay: 1000ms;}
+.section.projects.loaded .item:nth-child(11){transition-delay: 1100ms;}
+.section.projects.loaded .item:nth-child(12){transition-delay: 1200ms;}
+
+.section.projects .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: filter .45s ease;
+    filter: brightness(0.6) grayscale(100%);
+    transform: translateZ(0);
+}
+
+.section.section.projects .item:hover img{
+    filter: brightness(1) grayscale(0%);
+}
+
+.section.projects .item .info{
+    height: 101%;
+    width: 101%;
+    background-color: rgba(0,0,0,.7);
+    position: absolute;
+    transform: translateY(calc(100% + 20px));
+    will-change: transform;
+    transition: transform .25s ease;
+    padding: 5px 10px;
+    pointer-events: none;
+}
+
+.section.projects .item:hover .info{
+    transform: translateY(0px);
+    pointer-events: all;
+}
+
+.section.projects .item .info .name{
+    font-size: 18px;
+    font-weight: 600;
+    color:white;
+    width: 100%;
+    text-align: left;
+}
+
+.section.projects .item .info .tools{
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-bottom: 5px;
+    border-bottom: 2px solid white;
+}
+
+.section.projects .item .info .tools .tool{
+    font-size: 14px;
+    font-weight: 300;
+    color: var(--accent-color);
+    margin-right: 5px;
+}
+
+.section.projects .item .info .description{
+    margin-top: 5px;
+    font-size: 15px;
+    color:white;
+    font-weight: 200;
 }
